codex-rs/tui/src/status/snapshots/darwin_code_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI DarwinCode (v0.0.0)                                              │
│                                                                             │
│ BYOK mode uses provider-side billing,                                       │
│ rate limits, and quota from the configured API endpoint                     │
│                                                                             │
│  Model:            gpt-5.1-darwin-code-max (reasoning none, summaries auto) │
│  Model provider:   OpenAI - https://api.openai.com/v1                       │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Custom (read-only, on-request)                           │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      1.2K total  (800 input + 400 output)                     │
│  Context window:   100% left (1.2K used / 272K)                             │
│  Monthly limit:    [██████████████████░░] 88% left (resets 07:08 on 7 May)  │
╰─────────────────────────────────────────────────────────────────────────────╯
