codex-rs/tui/src/status/snapshots/darwin_code_tui__status__tests__status_snapshot_shows_unavailable_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI DarwinCode (v0.0.0)                                              │
│                                                                             │
│ BYOK mode uses provider-side billing,                                       │
│ rate limits, and quota from the configured API endpoint                     │
│                                                                             │
│  Model:            gpt-5.1-darwin-code-max (reasoning none, summaries auto) │
│  Model provider:   OpenAI - https://api.openai.com/v1                       │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Custom (read-only, on-request)                           │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      750 total  (500 input + 250 output)                      │
│  Context window:   100% left (750 used / 272K)                              │
│  Limits:           not available for this account                           │
╰─────────────────────────────────────────────────────────────────────────────╯
